fixed up spacing on all platforms for homepage and about page

--- a/unplugged/css/main.css
+++ b/unplugged/css/main.css
@@ -331,7 +331,7 @@ input[type=button]{
 }
 
 .features .content-wrapper{
-
+  padding: 10px 0 40px 0;
 }
 
 .features-items{
@@ -344,7 +344,7 @@ input[type=button]{
 }
 
 .features i{
- font-size: 3.75em;
+ font-size: 3.975em;
  margin-bottom: 40px;
 }
 .features-items-description{
@@ -357,6 +357,10 @@ input[type=button]{
 
 .reviews{
   padding: 20px 20px;
+}
+
+.reviews h2{
+  font-size: 1.87em;
 }
 
 .reviews h3{
@@ -430,11 +434,17 @@ input[type=button]{
 }
 
 .frequently-asked-questions{
-  padding: 0px 20px;
+  padding: 10px 20px 30px 20px;
 }
-
+.frequently-asked-questions h2{
+  font-size: 2em;
+}
 .single-faq{
-
+  padding-bottom: 20px;
+}
+.single-faq h3{
+  font-size: 1.3em;
+  font-weight: bold;
 }
 
 /* footer */
@@ -487,6 +497,9 @@ footer h4{
 }
 .social-icons .fa-facebook-f{
   padding: 15px 19px;
+}
+.copyright{
+  padding-bottom: 5px;
 }
 /* ==========================================================================
    Helper classes
@@ -608,7 +621,7 @@ footer h4{
     width: 100%;
   }
   header img{
-    width: 100%;
+    padding-left: 20px;
   }
   header nav{
     width: 90%;
@@ -648,7 +661,10 @@ footer h4{
   }
   .hero-area{
     width: 100%;
-
+  }
+  .hero-area h1{
+    font-size: 3.6em;
+    padding-right: 90px;
   }
 
   .hero-area .content-wrapper{
@@ -696,12 +712,13 @@ footer h4{
 
   }
   .features h2{
-    width: 100%;
+    font-size: 3em;
+    margin-bottom: 0;
   }
   .features p{
-   margin: 0;
-
+   font-size: 1.1em;
   }
+
   .features-items-description{
     width: 100%;
   }
@@ -732,17 +749,16 @@ footer h4{
   .reviews .content-wrapper{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
   }
 
   .reviews h3{
     margin-bottom: 30px;
   }
 
-  .reviews h3, .reviews h4{
-    display: flex;
-    justify-content: flex-start;
-    width: 100%;
+  .reviews h4{
+    margin: 0;
+    font-size: 1.8em;
   }
   .reviews figure{
     width: 50%;
@@ -752,7 +768,7 @@ footer h4{
   }
 
   .reviews p{
-
+    font-size: 1.1em;
   }
   /*------- tablet styles - about page ------*/
 
@@ -821,7 +837,7 @@ footer h4{
 
   .single-faq{
     width: 40%;
-    padding: 30px 25px;
+    padding: 20px 25px 20px 25px;
   }
 
   /* footer */
@@ -866,6 +882,7 @@ footer h4{
     width: 100%;
     text-align: center;
     padding-top: 90px;
+
   }
 }
 @media only screen and (min-width: 1200px){
@@ -954,18 +971,26 @@ footer h4{
     justify-content: space-between;
     align-items: flex-start;
     flex-flow: row wrap;
+    padding: 10px 0;
   }
 
   .form-description{
-      width:35%;
+    width:35%;
   }
-
+  .form-description h3{
+    font-size: 2em;
+    margin: 0;
+  }
+  .form-description p{
+    font-size: 1.3em;
+  }
   .form{
-   width: 35%;
+
   }
 
   .form h3{
-
+    font-size: 2em;
+    margin-top: 0px;
   }
 
   #form-text{
@@ -1015,8 +1040,8 @@ footer h4{
   .features-items-description{
   }
 
-  .reviews{
-
+  .reviews .content-wrapper{
+    padding-bottom: 50px;
   }
 
   .reviews h3{
